--- a/MEDVBiServ/Layout/NavMenu.razor
+++ b/MEDVBiServ/Layout/NavMenu.razor
@@ -9,6 +9,11 @@
 
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
+        <div class="nav-item px3">
+            <NavLink Href="/" Icon="@Icons.Material.Filled.Home">
+                Home
+            </NavLink>
+        </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="CreatePage" target="_blank">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Predigt erstellen
